# mindustry-rust

./: .gitignore  README.md  RUST_RELEASE_AUDIT_CONTINUATION.md  RUST_RELEASE_AUDIT_FINDINGS.md
audit/: agent-effect-next-slices-20260324.md  agent-lifecycle-gap-20260324.md  agent-protocol-input-gap-refresh-20260324.md  agent-render-snapshot-gap-refresh-20260324.md  agent-render-ui-gap-20260324.md  ci-gate-plan.md  client-snapshot-parity.md  effect-observability-review-20260326.md  parity-gap-shard-input-render-ui-20260324g.md  parity-gap-shard-session-world-20260324g.md  (+5 more)
rust/: ARCHITECTURE.md  (+5 more)
rust/mdt-client-min/: Cargo.toml  INTERNAL_BOUNDARIES.md
rust/mdt-client-min/assets/: version.properties
rust/mdt-client-min/src/: arcnet_loop.rs  bootstrap_flow.rs  client_session.rs  connect_packet.rs  custom_channel_registry_glue.rs  custom_packet_runtime.rs  custom_packet_runtime_bridge.rs  custom_packet_runtime_host.rs  custom_packet_runtime_logic.rs  custom_packet_runtime_relay.rs  custom_packet_runtime_surface.rs  effect_data_runtime.rs  effect_runtime.rs  entity_snapshot_families.rs  event_summary.rs  inbound_remote_registry_glue.rs  lib.rs  net_loop.rs  packet_registry.rs  packet_registry_typed_remote_glue.rs  remote_lookup.rs  render_runtime.rs  rules_objectives_semantics.rs  runtime_custom_packet_business.rs  runtime_entity_ownership.rs  session_state.rs  snapshot_ingest.rs  snapshot_registry_glue.rs  state_snapshot_semantics.rs  typed_remote_dispatch.rs  udp_loop.rs  well_known_registry_glue.rs
rust/mdt-client-min/src/render_runtime/: effect_contract_executor.rs
(+76 files in other folders)
